# MeMath

./: .gitignore  CMakeLists.txt  README.md  mecli.cxx
logging/: CMakeLists.txt  logger.cxx  logger.h
memath/: CMakeLists.txt  vector3.cxx  vector3.h
